# LightC

./: .LIGHTC_ASM.s  .LIGHTC_BUILTIN.cpp  .gitignore  CMakeLists.txt  LightC.y  README.md  build.sh  build_bison.sh  def.h  mini.l  mini.y  tac.c  tac.h  test.sh  test_check.py  y.tab.c  y.tab.h
.github/workflows/: cmake.yml
asm_include/arm64/: AsmDef.hpp
bison/: LightC.l  LightC.y  bison.cpp  build.sh  lex.yy.cc
checker/: Checker.cpp  TypeManager.cpp
docs/: main_doc_zh.md
include/: AsmDump.hpp  AsmTypeDef.hpp  Checker.h  TypeInfo.hpp  TypeManager.h  bison.hpp  cppbuiltin.h  def.h  linker.hpp  object.h  tac.hpp  tac_def.h  utils.h  utils.hpp
shared_include/: TypeInfo.hpp  cppbuiltin.h
src/: utils.cpp
src/bison/: LightC.l  LightC.y  bison.cpp  build.sh
src/builtin_src/: cppbuiltin.cpp
src/checker/: Checker.cpp  TypeInfo.cpp  TypeManager.cpp
src/linker/: linker.cpp
src/object/: AsmDump.cpp  object.cpp
src/object/regmgr/: RegManager.cpp  VarRegInfo.cpp
src/tac/: tac_base.cpp  tac_exp.cpp
tac/: tac_base.cpp  tac_block.cpp  tac_exp.cpp  tac_func.cpp
test/: 00_type  06_2_type  0_ret_type  0_type  11_13_type  1_11_type  2_6_type  3_15_type  5_12_type  7_13_type  7_14_type  9_12_type  9_16_type  CMakeLists.txt  block  block.s  class  class.cpp  class.cpp.s  class.s  exp  exp.s  func  func.cpp  func.cpp.s  test.cpp
test/tac/: 00_ret_type  00_test  01_3_type  03_12_type  03_6_type  04_11_type  08_6_type  10_16_type  10_8_type
